[gd_scene load_steps=3 format=3 uid="uid://cowug1mbtod0e"]

[ext_resource type="Script" uid="uid://bl2d0faey1aiu" path="res://Fuseki/Caller/FusekiCallerButton.gd" id="1_bj6wi"]
[ext_resource type="Script" uid="uid://ceull8c7yt0hd" path="res://Fuseki/Caller/FusekiQuery.gd" id="2_c28a7"]

[node name="FusekiCallerButton" type="Button"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -113.0
offset_top = -39.0
offset_right = 113.0
offset_bottom = 39.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Call Fuseki"
script = ExtResource("1_bj6wi")

[node name="SparqlFusekiQueries" type="HTTPRequest" parent="."]
use_threads = true

[node name="FusekiQuery" type="Node" parent="SparqlFusekiQueries"]
script = ExtResource("2_c28a7")

[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="request_completed" from="SparqlFusekiQueries" to="." method="_on_fuseki_completion"]
